[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
description = "Performance benchmark comparing ranked-semaphore vs tokio::sync::Semaphore"



[dependencies]
# Async runtimes
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"

# Our high-performance semaphore
ranked-semaphore = { path = "../ranked-semaphore" }

# Benchmarking and utilities
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"

# Statistics  
# statistical = "1.0"  # This dependency may have issues, commented out for now

[[bench]]
name = "tokio_comparison"
harness = false


