[package]
name = "ranked-semaphore"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance ranked semaphore with priority support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ranked-semaphore"
documentation = "https://docs.rs/ranked-semaphore"
keywords = ["async", "semaphore", "priority", "tokio", "sync"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
