[package]
name = "ranked-semaphore"
version = "0.1.3"
edition = "2021"
authors = ["YeungKC <ranked-semaphore@YeungKC.com>"]
description = "A high-performance ranked semaphore with priority support"
license = "MIT"
repository = "https://github.com/YeungKC/ranked-semaphore"
documentation = "https://docs.rs/ranked-semaphore"
keywords = ["async", "semaphore", "priority", "tokio", "sync"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
