[package]
name = "ranked-semaphore"
version = "0.1.4"
edition = "2021"
authors = ["YeungKC <ranked-semaphore@YeungKC.com>"]
description = "A high-performance ranked semaphore with priority support"
license = "MIT"
repository = "https://github.com/YeungKC/ranked-semaphore"
documentation = "https://docs.rs/ranked-semaphore"
keywords = ["async", "semaphore", "priority", "tokio", "sync"]
categories = ["asynchronous", "concurrency"]
readme = "../README.md"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
async-std = { workspace = true }
smol = { workspace = true }
futures = { workspace = true }

